--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.08MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-390.0KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-366.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-8.87MB/s(Youtube:不良林), server: 139.162.7.177, port: 80, type: vmess, uuid: e982184f-c6e0-4ba4-91cc-71eb6c702588, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nkpvpn.site, ws-headers: {Host: 139.162.7.177}}
+  - {name: 🇨🇳 中国-403.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-194.1KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.20MB/s(Youtube:不良林), server: 129.146.133.157, port: 51009, type: vmess, uuid: 81714cef-9bde-4a08-aa50-d6bc0172d78b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.53MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.41MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 中国-955.1KB/s(Youtube:不良林), server: 14.152.92.82, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇰🇷 韩国-2.78MB/s(Youtube:不良林), server: 146.56.110.129, port: 53702, type: vmess, uuid: d0ee8ec0-ef63-41aa-9087-11edf7a978b9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.49MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
   - {name: 🇨🇦 加拿大-740.6KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇭🇰 香港-1.43MB/s(Youtube:不良林), server: hgc.sharecentre.xyz, port: 120, type: vmess, uuid: be84d85b-cefa-3d44-99f8-8dab4da44f2d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /nj, ws-headers: {Host: hgc.sharecentre.xyz}}
+  - {name: 🇻🇳 越南-2.35MB/s(Youtube:不良林), server: 103.151.238.40, port: 80, type: vmess, uuid: e982184f-c6e0-4ba4-91cc-71eb6c702588, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nkpvpn.site, ws-headers: {Host: 103.151.238.40}}
+  - {name: 🇰🇷 韩国-2.00MB/s(Youtube:不良林), server: 146.56.110.129, port: 26396, type: vmess, uuid: f4baed1c-ab86-4b70-caa3-df853467e1bd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-390.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-8.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-403.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-194.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-740.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.35MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-390.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-8.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-403.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-194.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-740.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.35MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-390.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-8.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-403.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-194.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-740.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.35MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-390.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-8.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-403.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-194.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-740.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.35MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-390.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-8.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-403.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-194.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-740.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.35MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-390.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-8.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-403.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-194.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-740.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.35MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-390.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-366.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-8.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-403.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-194.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.78MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-740.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.35MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
