--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇰🇷 韩国-2.00MB/s(Youtube:不良林), server: 146.56.110.129, port: 26396, type: vmess, uuid: f4baed1c-ab86-4b70-caa3-df853467e1bd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.66MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.24MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-2.20MB/s(Youtube:不良林), server: 129.146.133.157, port: 51009, type: vmess, uuid: 81714cef-9bde-4a08-aa50-d6bc0172d78b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.60MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.27MB/s(Youtube:不良林), server: 192.210.206.50, port: 11188, type: vmess, uuid: de0ff7f6-370e-41c9-c24a-b932c7c1ad58, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 192.210.206.50}}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 14.152.92.81, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇳 中国-338.8KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-2.61MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-413.0KB/s(Youtube:不良林), server: 36.134.156.5, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇹🇭 泰国-363.3KB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-334.5KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-2.72MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-1.69MB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-463.5KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-353.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-520.0KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-2.13MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.73MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.0KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-363.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-520.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.0KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-363.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-520.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.0KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-363.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-520.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.0KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-363.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-520.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.0KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-363.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-520.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.0KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-363.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-520.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-338.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.0KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-363.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-334.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-520.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
