--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.24MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-3.25MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.60MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.68MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.72MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-463.5KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-353.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-520.0KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-2.13MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.73MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-254.1KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇸🇬 新加坡-3.80MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
+  - {name: 未知国家-2.90MB/s(Youtube:不良林), server: 207.2.120.172, port: 443, type: trojan, password: 34c2ebbd-8ecf-3c1c-a945-19cd394a3e43, skip-cert-verify: true}
+  - {name: 🇨🇦 (已存活2天)加拿大-2.70MB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-2.66MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.70MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.43MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-4.25MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-521.7KB/s(Youtube:不良林), server: in-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: in-01.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.73MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.80MB/s(Youtube:不良林)
+      - 未知国家-2.90MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活2天)加拿大-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇮🇳 印度-521.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.80MB/s(Youtube:不良林)
+      - 未知国家-2.90MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活2天)加拿大-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇮🇳 印度-521.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.80MB/s(Youtube:不良林)
+      - 未知国家-2.90MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活2天)加拿大-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇮🇳 印度-521.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.80MB/s(Youtube:不良林)
+      - 未知国家-2.90MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活2天)加拿大-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇮🇳 印度-521.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.80MB/s(Youtube:不良林)
+      - 未知国家-2.90MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活2天)加拿大-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇮🇳 印度-521.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.80MB/s(Youtube:不良林)
+      - 未知国家-2.90MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活2天)加拿大-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇮🇳 印度-521.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-463.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-520.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-254.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.80MB/s(Youtube:不良林)
+      - 未知国家-2.90MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活2天)加拿大-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.70MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇮🇳 印度-521.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
